# plotnine_polars

./: .gitignore  .nojekyll  README.md  index.html  pyproject.toml  search.json
docs/: _quarto.yml  index.qmd
docs/_site/: index.html  search.json
docs/_site/notebooks/: aesthetic-mappings.html  anscombes-quartet.html  bar-plot-with-2-variables.html  facets.html  geometric-objects.html  please-i-want-some-more-labels.html  scale-basics.html
docs/data/: citi-bike-stations.parquet  citi-bike-trips-per-day.csv  nyc-neighborhoods-coords.parquet
docs/notebooks/: aesthetic-mappings.qmd  anscombes-quartet.qmd  bar-plot-with-2-variables.qmd  citi-bike-trips.qmd  facets.qmd  geometric-objects.qmd  nyc-neighborhoods-and-stations.qmd  please-i-want-some-more-labels.qmd  scale-basics.qmd
docs/scripts/: register-kernel.sh
notebooks/: aesthetic-mappings.html  anscombes-quartet.html  bar-plot-with-2-variables.html  citi-bike-trips.html  facets.html  geometric-objects.html  nyc-neighborhoods-and-stations.html  please-i-want-some-more-labels.html  scale-basics.html
src/plotnine_polars/: __init__.py  _fluent.py  _polars_namespace.py
tests/: test_plotnine_polars.py
