[project]
name = "plotnine-polars"
version = "0.2.0"
description = "Polars dataframe namespace and fluent API for plotnine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "plotnine",
    "polars>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["plotnine_polars*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
plotnine = { path = "../plotnine", editable = true }
